--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,7 @@
 name: qr_flutter
 description: >
-  QR.Flutter is a Flutter library for simple and fast QR code rendering via a
-  Widget or custom painter.
-version: 4.0.1
+  Fork of QR.Flutter
+version: 4.0.2
 homepage: https://github.com/theyakka/qr.flutter
 
 environment:
